Fixed alignment on recent project subheadings

--- a/css/index.css
+++ b/css/index.css
@@ -519,7 +519,7 @@ html {
 }
 .main-content .projects .villas .text-content h3 {
   position: absolute;
-  right: 0px;
+  right: 58px;
   bottom: 400px;
   border: 2px solid white;
   width: 450px;
@@ -611,7 +611,7 @@ html {
 }
 .main-content .projects .outskirts .text-content h3 {
   position: absolute;
-  left: 0px;
+  left: 58px;
   bottom: 1150px;
   border: 2px solid white;
   width: 450px;
@@ -695,8 +695,9 @@ html {
   }
 }
 .main-content .projects .blocks .text-content h3 {
+  display: inline-block;
   position: absolute;
-  right: 0px;
+  right: 58px;
   bottom: 400px;
   border: 2px solid white;
   width: 450px;
