--- a/less/home.less
+++ b/less/home.less
@@ -186,7 +186,7 @@
 						
 					}
 					position: absolute;
-					right: 0px;
+					right: 58px;
 					bottom: 400px;
 					border: 2px solid white;
 					background: @recent-proj-gray;
@@ -274,7 +274,7 @@
 						}
 					
 					position: absolute;
-					left: 0px;
+					left: 58px;
 					bottom: 1150px;
 					border: 2px solid white;
 					background: @recent-proj-gray;
@@ -352,8 +352,9 @@
 						width: 100%;
 						left: 10px;
 					}
+					display: inline-block;
 					position: absolute;
-					right: 0px;
+					right: 58px;
 					bottom: 400px;
 					border: 2px solid white;
 					background: @recent-proj-gray;
